home page actually done

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,5 +11,4 @@ block content
 						p A Good Life Comes From Good Habits. Get Started Today.
 						a#login-button-login-fb.button-facebook.js-facebook-login(href="/home") Log in with Facebook      
 		#video-wrap
-			video.home-video(muted="true" loop)
-				source(src="/images/fly.mp4")
+			video.home-video(src="/images/fly.webm", muted="true" loop)
