--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/home.css')
 	body
 		block content
 		script(src="/bower_components/jquery/dist/jquery.min.js")
