--- a/views/newmake.jade
+++ b/views/newmake.jade
@@ -8,5 +8,5 @@
 			label(for="habit-days") I will {{newHabit.name}} for 
 			input#habit-days.form-control(type="text", ng-model="newHabit.numADay", placeholder="Ex. 3")
 			label times a day for 30 days.
-		button.newmake-create-btn.btn.btn-primary(ng-click="") Begin!
+		button.newmake-create-btn.btn.btn-primary(ng-click="createHabit()") Begin!
 	.col-md-4
