--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -62,6 +62,10 @@ nav .dropdown {
 	margin-top: 30px;
 }
 
+.modal-dialog {
+	margin-top: 10%;
+}
+
 /* Create Buttons Wrap */
 
 .create-buttons-wrap {
@@ -146,10 +150,16 @@ nav .dropdown {
 	padding-right: 25px;
 }
 
-.habit-item>h3 {
+.habit-item>a {
+	display: inline-block;
+	cursor: pointer;
+}
+
+.habit-item>a>h3 {
 	display: inline-block;
 	margin-top: 15px;
 }
+
 .habit-item>button {
 	margin-top: 11px;
 	float: right;
