--- a/views/app.jade
+++ b/views/app.jade
@@ -16,7 +16,7 @@ html(ng-app="HappIT")
 							h4.modal-title {{habitName}}
 						.modal-body
 							p You have {{habitText}} for...
-							h3 2 Days, and 02:45:23 hours
+							h3 {{timeText}}
 							p in a row. Keep up the good work!
 						.modal-footer
 							button.btn.btn-default(type="button", data-dismiss="modal") Close
