--- a/views/app.jade
+++ b/views/app.jade
@@ -36,7 +36,7 @@ html(ng-app="HappIT")
 								a(href="#") Pricing
 							li
 								.dropdown
-									a#headerDropdown.dropdown-toggle(type="button", data-toggle="dropdown") Hello, Ben
+									a#headerDropdown.dropdown-toggle(type="button", data-toggle="dropdown") Hello, Ryan
 										span.caret
 									ul.dropdown-menu(aria-labelledby="headerDropdown")
 										li
