--- a/views/index.jade
+++ b/views/index.jade
@@ -4,11 +4,11 @@ block content
 	#home-wrap
 		#home-text-wrap
 			.container-fluid
-				.row 
-					.col-md-2
-					#home-text.col-md-5
+				.content-wrap
+					#background-trans
+					#home-text
 						h1 HappIT
-						p A Good Life Comes From Good Habits. Get Started Today.
-						a#login-button-login-fb.button-facebook.js-facebook-login(href="/home") Log in with Facebook      
+						p A Good Life Comes From Good Habits
+						a#login-button-login-fb.button-facebook.js-facebook-login(href="/home") Get Started Today   
 		#video-wrap
 			video.home-video(src="/images/fly.webm", muted="true" loop)
