--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -9,13 +9,6 @@ body {
 	margin: 0px;
 }
 
-#home-wrap {
-	display: none;
-	color: #fff;
-	width: 100%;
-
-}
-
 #home-text-wrap {
 	position: absolute;
 	width: 100%;
@@ -23,14 +16,45 @@ body {
 	z-index: 10;
 }
 
+.content-wrap {
+	position: relative;
+	margin: 0 auto;
+	width: 470px;
+}
+
+#background-trans {
+	position: absolute;
+	opacity: 0.7;
+	background-color: black;
+	width: 100%;
+	height: 290px;
+	border-radius: 10px;
+}
+
+#home-wrap {
+	display: none;
+	color: #fff;
+	width: 100%;
+}
+
+#home-text {
+	background: transparent;
+	height: 290px;
+	text-align: right;
+	padding-left: 0px;
+	padding-top: 10px;
+	position: relative;
+}
+
 #home-text h1 {
 	font-size: 100px;
-	opacity: 0.8;
+	margin-right: 24px;
+	margin-top: 10px;
 }
 
 #home-text p {
 	font-size: 18px;
-	opacity: 0.8;
+	margin-right: 24px;
 }
 
 #video-wrap {
@@ -47,27 +71,27 @@ body {
 }
 
 .button-facebook {
-	opacity: 1.0;
+	margin-right: 24px;
+	position: absolute;
+	right: 0;
+	bottom: 27px;
 	color: #fff;
 	background-color: #3b5998;
 	border-color: #3b5998;
-	position: relative;
 	text-transform: capitalize;
-	margin-bottom: 0;
 	font-weight: 400;
 	text-align: center;
 	vertical-align: middle;
 	cursor: pointer;
 	background-image: none;
 	border: 1px solid transparent;
-	border-radius: 500px;
+	border-radius: 3px;
 	font-size: 16px;
 	line-height: 1.5;
 	padding: 8px 25px 6px;
 	padding-left: 56px;
 	border-width: 1px;
 	white-space: normal;
-	margin: 0 0 1em;
 	text-decoration: none;
 }
 
@@ -79,9 +103,9 @@ body {
 }
 
 .button-facebook:before {
+	left: 24px;
 	width: 22px;
 	height: 22px;
-	left: 24px;
 	position: absolute;
 	top: 6px;
 	content: '';
